# inmemIPC

./: .gitignore  CMakeLists.txt  Makefile  Makefile.objects  config.h  config.h.in  config.m4  config.nice  config.status  config.w32  configure  ext.h  install  libtool  memcp.c  memcp.h  memcp.la  memcp.lo  php_ext.h  php_memcp.h
memcp/: greeting.lo  greeting.zep.c  greeting.zep.h
